--- a/contact.html
+++ b/contact.html
@@ -1,200 +1,220 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <!-- basic -->
-      <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <!-- mobile metas -->
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-      <!-- site metas -->
-      <title>Contact</title>
-      <meta name="keywords" content="">
-      <meta name="description" content="">
-      <meta name="author" content="">
-      <!-- bootstrap css -->
-      <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-      <!-- style css -->
-      <link rel="stylesheet" type="text/css" href="css/style.css">
-      <!-- Responsive-->
-      <link rel="stylesheet" href="css/responsive.css">
-      <!-- fevicon -->
-      <link rel="icon" href="images/fevicon.png" type="image/gif" />
-      <!-- Scrollbar Custom CSS -->
-      <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
-      <!-- Tweaks for older IEs-->
-      <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-      <!-- fonts -->
-      <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;800&family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
-   </head>
-   <body>
-      <!-- header top section start -->
-      <div class="header_top_section">
-         <div class="container">
-            <div class="row">
-               <div class="col-sm-12">
-                  <div class="header_top_main">
-                     <div class="call_text"><a href="#"><i class="fa fa-phone" aria-hidden="true"></i> +2347023177147</a></div>
-                     <div class="call_text_2"><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i> adejokadcon@gmail.com</a></div>
-                     <div class="call_text_1"><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i>Ota, Ogun State</a></div>
+
+<head>
+   <!-- basic -->
+   <meta charset="utf-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <!-- mobile metas -->
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+   <!-- site metas -->
+   <title>Contact</title>
+   <meta name="keywords" content="">
+   <meta name="description" content="">
+   <meta name="author" content="">
+   <!-- bootstrap css -->
+   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+   <!-- style css -->
+   <link rel="stylesheet" type="text/css" href="css/style.css">
+   <!-- Responsive-->
+   <link rel="stylesheet" href="css/responsive.css">
+   <!-- fevicon -->
+   <link rel="icon" href="images/fevicon.png" type="image/gif" />
+   <!-- Scrollbar Custom CSS -->
+   <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
+   <!-- Tweaks for older IEs-->
+   <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+   <!-- fonts -->
+   <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;800&family=Sen:wght@400;700;800&display=swap"
+      rel="stylesheet">
+</head>
+
+<body>
+   <!-- header top section start -->
+   <div class="header_top_section">
+      <div class="container">
+         <div class="row">
+            <div class="col-sm-12">
+               <div class="header_top_main">
+                  <div class="call_text"><a href="#"><i class="fa fa-phone" aria-hidden="true"></i> +2347023177147</a>
                   </div>
+                  <div class="call_text_2"><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i>
+                        adejokadcon@gmail.com</a></div>
+                  <div class="call_text_1"><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i>Ota, Ogun
+                        State</a></div>
                </div>
             </div>
          </div>
       </div>
-      <!-- header top section start -->
-      <!-- header section start -->
-      <div class="header_section header_bg">
-         <div class="container-fluid">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+   </div>
+   <!-- header top section start -->
+   <!-- header section start -->
+   <div class="header_section header_bg">
+      <div class="container-fluid">
+         <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
-               </button>
-               <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav ml-auto">
-                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                     </li>
-                     <li class="nav-item">
-                        <a class="nav-link" href="services.html">Services</a>
-                     </li>
-                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
-                     </li>
-                     <li class="nav-item">
-                        <a class="nav-link" href="projects.html">Project</a>
-                     </li>
-                     <li class="nav-item active">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
-                     </li>
-                  </ul>
-                  <div class="quote_btn"><a href="https://wa.me/2347025223913" target="_blank">Get A Quote</a></div>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+               <ul class="navbar-nav ml-auto">
+                  <li class="nav-item">
+                     <a class="nav-link" href="/">Home</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="/services">Services</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="/about">About</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="/projects">Project</a>
+                  </li>
+                  <li class="nav-item active">
+                     <a class="nav-link" href="/contact">Contact Us</a>
+                  </li>
+               </ul>
+               <div class="quote_btn"><a href="https://wa.me/2347025223913" target="_blank">Get A Quote</a></div>
+               </form>
+            </div>
+         </nav>
+      </div>
+   </div>
+   <!-- header section end -->
+   <!-- contact section start -->
+   <div class="contact_section layout_padding">
+      <div class="container">
+         <div class="row">
+            <div class="col-md-12">
+               <h1 class="contact_taital">Contact Us</h1>
+            </div>
+         </div>
+      </div>
+      <div class="container-fluid">
+         <div class="contact_section_2">
+            <div class="row">
+               <div class="col-md-6">
+                  <form action="">
+                     <div class="mail_section_1">
+                        <input type="text" class="mail_text" placeholder="Name" name="Name">
+                        <input type="text" class="mail_text" placeholder="Phone Number" name="Phone Number">
+                        <input type="text" class="mail_text" placeholder="Email" name="Email">
+                        <textarea class="message-bt" placeholder="Message" rows="5" id="comment"
+                           name="Message"></textarea>
+                        <div class="send_bt"><a href="#">SEND</a></div>
+                     </div>
                   </form>
                </div>
-            </nav>
-         </div>
-      </div>
-      <!-- header section end -->
-      <!-- contact section start -->
-      <div class="contact_section layout_padding">
-         <div class="container">
-            <div class="row">
-               <div class="col-md-12">
-                  <h1 class="contact_taital">Contact Us</h1>
+               <div class="col-md-6 padding_left_15">
+                  <div class="contact_img"><img src="images/contact-img.png"></div>
                </div>
             </div>
          </div>
-         <div class="container-fluid">
-            <div class="contact_section_2">
-               <div class="row">
-                  <div class="col-md-6">
-                     <form action="">
-                        <div class="mail_section_1">
-                           <input type="text" class="mail_text" placeholder="Name" name="Name">
-                           <input type="text" class="mail_text" placeholder="Phone Number" name="Phone Number"> 
-                           <input type="text" class="mail_text" placeholder="Email" name="Email">
-                           <textarea class="message-bt" placeholder="Message" rows="5" id="comment" name="Message"></textarea>
-                           <div class="send_bt"><a href="#">SEND</a></div>
-                        </div>
-                     </form>
-                  </div>
-                  <div class="col-md-6 padding_left_15">
-                     <div class="contact_img"><img src="images/contact-img.png"></div>
-                  </div>
+      </div>
+      <div class="map_main">
+         <div class="map-responsive">
+            <iframe
+               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126833.10245122731!2d3.1058527893057266!3d6.580280723572589!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b9903ef9912d7%3A0x4f1a317e5c3e4b00!2sOta%2C%20Ogun%20State!5e0!3m2!1sen!2sng!4v1721660485486!5m2!1sen!2sng"
+               width="600" height="600" frameborder="0" style="border:0;width: 100%;" allowfullscreen=""></iframe>
+         </div>
+      </div>
+   </div>
+   <!-- contact section end -->
+   <!-- footer section start -->
+   <div class="footer_section layout_padding">
+      <div class="container">
+         <div class="row">
+            <div class="col-md-12">
+               <div class="location_text">
+                  <ul>
+                     <li>
+                        <a href="tel:+2347023177147"><span class="padding_15"><i class="fa fa-mobile"
+                                 aria-hidden="true"></i></span> <br>Call +2347023177147</a>
+                     </li>
+                     <li class="active">
+                        <a href="mailto:adejokadcon@gmail.com"><span class="padding_15"><i class="fa fa-envelope"
+                                 aria-hidden="true"></i></span> <br>adejokadcon@gmail.com</a>
+                     </li>
+                     <li>
+                        <a href="#"><span class="padding_15"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
+                           <br>Ota, Ogun State</a>
+                     </li>
+                     <li class="active">
+                        <a href="mailto:adjokadcon@yahoo.com"><span class="padding_15"><i class="fa fa-envelope"
+                                 aria-hidden="true"></i></span> <br>adjokadcon@yahoo.com</a>
+                     </li>
+
+
+
+                  </ul>
                </div>
             </div>
          </div>
-         <div class="map_main">
-            <div class="map-responsive">
-               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126833.10245122731!2d3.1058527893057266!3d6.580280723572589!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b9903ef9912d7%3A0x4f1a317e5c3e4b00!2sOta%2C%20Ogun%20State!5e0!3m2!1sen!2sng!4v1721660485486!5m2!1sen!2sng" width="600" height="600" frameborder="0"  style="border:0;width: 100%;" allowfullscreen=""></iframe>
-            </div>
-         </div>
-      </div>
-      <!-- contact section end -->
-      <!-- footer section start -->
-      <div class="footer_section layout_padding">
-         <div class="container">
+         <div class="footer_section_2">
             <div class="row">
-               <div class="col-md-12">
-                  <div class="location_text">
+               <div class="col-md-4">
+                  <h2 class="useful_text">QUICK LINKS</h2>
+                  <div class="footer_menu">
                      <ul>
-                        <li>
-                           <a href="tel:+2347023177147"><span class="padding_15"><i class="fa fa-mobile" aria-hidden="true"></i></span> <br>Call +2347023177147</a>
-                        </li>
-                        <li class="active">
-                           <a href="mailto:adejokadcon@gmail.com"><span class="padding_15"><i class="fa fa-envelope" aria-hidden="true"></i></span> <br>adejokadcon@gmail.com</a>
-                        </li>
-                        <li>
-                           <a href="#"><span class="padding_15"><i class="fa fa-map-marker" aria-hidden="true"></i></span> <br>Ota, Ogun State</a>
-                        </li> 
-                        <li class="active">
-                           <a href="mailto:adjokadcon@yahoo.com"><span class="padding_15"><i class="fa fa-envelope" aria-hidden="true"></i></span> <br>adjokadcon@yahoo.com</a>
-                        </li>
-
-
-
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/about">About</a></li>
+                        <li><a href="/services">Services</a></li>
+                        <li><a href="/projects">Projects</a></li>
+                        <li><a href="/contact">Contact Us</a></li>
                      </ul>
                   </div>
                </div>
-            </div>
-            <div class="footer_section_2">
-               <div class="row">
-                  <div class="col-md-4">
-                     <h2 class="useful_text">QUICK LINKS</h2>
-                     <div class="footer_menu">
-                        <ul>
-                           <li><a href="index.html">Home</a></li>
-                           <li><a href="about.html">About</a></li>
-                           <li><a href="services.html">Services</a></li>
-                           <li><a href="projects.html">Projects</a></li>
-                           <li><a href="contact.html">Contact Us</a></li>
-                        </ul>
-                     </div>
-                  </div>
-                  <div class="col-md-4">
-                     <h2 class="useful_text">Work Portfolio</h2>
-                     <p class="lorem_text">We are a established construction company with a proven track record of delivering high-quality projects on time and within budget. We specialize in residential construction & renovations, commercial construction, Industrial construction. Our team of skilled professionals is passionate about exceeding client expectations and bringing their visions to life.</p>
-                  </div>
-                  
+               <div class="col-md-4">
+                  <h2 class="useful_text">Work Portfolio</h2>
+                  <p class="lorem_text">We are a established construction company with a proven track record of
+                     delivering high-quality projects on time and within budget. We specialize in residential
+                     construction & renovations, commercial construction, Industrial construction. Our team of skilled
+                     professionals is passionate about exceeding client expectations and bringing their visions to life.
+                  </p>
                </div>
+
             </div>
-            <div class="social_icon">
-               <ul>
-                  <li>
-                     <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                  </li>
-                  <li>
-                     <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                  </li>
-                  <li>
-                     <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                  </li>
-                  <li>
-                     <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                  </li>
-               </ul>
+         </div>
+         <div class="social_icon">
+            <ul>
+               <li>
+                  <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+               </li>
+               <li>
+                  <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+               </li>
+               <li>
+                  <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+               </li>
+               <li>
+                  <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+               </li>
+            </ul>
+         </div>
+      </div>
+   </div>
+   <!-- footer section end -->
+   <!-- copyright section start -->
+   <div class="copyright_section">
+      <div class="container">
+         <div class="row">
+            <div class="col-sm-12">
+               <p class="copyright_text">2024 All Rights Reserved.</p>
             </div>
          </div>
       </div>
-      <!-- footer section end -->
-      <!-- copyright section start -->
-      <div class="copyright_section">
-         <div class="container">
-            <div class="row">
-               <div class="col-sm-12">
-                  <p class="copyright_text">2024 All Rights Reserved.</p>
-               </div>
-            </div>
-         </div>
-      </div>
-      <!-- copyright section end -->
-      <!-- Javascript files-->
-      <script src="js/jquery.min.js"></script>
-      <script src="js/popper.min.js"></script>
-      <script src="js/bootstrap.bundle.min.js"></script>
-      <script src="js/jquery-3.0.0.min.js"></script>
-      <script src="js/plugin.js"></script>
-   </body>
+   </div>
+   <!-- copyright section end -->
+   <!-- Javascript files-->
+   <script src="js/jquery.min.js"></script>
+   <script src="js/popper.min.js"></script>
+   <script src="js/bootstrap.bundle.min.js"></script>
+   <script src="js/jquery-3.0.0.min.js"></script>
+   <script src="js/plugin.js"></script>
+</body>
+
 </html>
