--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             <div class="col-sm-12">
                <div class="header_top_main">
 
-                  <div class="call_text"><a href="#"><i class="fa fa-phone" aria-hidden="true"></i> +2347023177147</a>
+                  <div class="call_text"><a href="tel:=2347023177147"><i class="fa fa-phone" aria-hidden="true"></i> +2347023177147</a>
                   </div>
-                  <div class="call_text_2"><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i>
+                  <div class="call_text_2"><a href="mailto:adejokadcon@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i>
                         adejokadcon@gmail.com</a></div>
                   <div class="call_text_1"><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i> Ota, Ogun
                         State</a></div>
@@ -114,8 +114,8 @@
                               <h1 class="banner_taital">JOKAD CONSTRUCTION NIG. LTD.</h1>
                               <p class="banner_text">Building a Better Tomorrow. </p>
                               <div class="btn_main">
-                                 <div class="started_text active"><a href="#">Contact US</a></div>
-                                 <div class="started_text"><a href="#">About Us</a></div>
+                                 <div class="started_text active"><a href="/contact">Contact US</a></div>
+                                 <div class="started_text"><a href="/about">About Us</a></div>
                               </div>
                            </div>
                         </div>
@@ -130,8 +130,8 @@
                               <h1 class="banner_taital">JOKAD CONSTRUCTION NIG. LTD. </h1>
                               <p class="banner_text">Innovative Solutions, Timeless Results.</p>
                               <div class="btn_main">
-                                 <div class="started_text active"><a href="#">Contact US</a></div>
-                                 <div class="started_text"><a href="#">About Us</a></div>
+                                 <div class="started_text active"><a href="contact">Contact US</a></div>
+                                 <div class="started_text"><a href="about">About Us</a></div>
                               </div>
                            </div>
                         </div>
