changed the link inside the get a quote button for all pages

--- a/contact.html
+++ b/contact.html
@@ -39,11 +39,11 @@
          <div class="row">
             <div class="col-sm-12">
                <div class="header_top_main">
-                  <div class="call_text"><a href="#"><i class="fa fa-phone" aria-hidden="true"></i> +2347023177147</a>
+                  <div class="call_text"><a href="tel:=2347023177147"><i class="fa fa-phone" aria-hidden="true"></i> +2347023177147</a>
                   </div>
-                  <div class="call_text_2"><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i>
+                  <div class="call_text_2"><a href="mailto:adejokadcon@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i>
                         adejokadcon@gmail.com</a></div>
-                  <div class="call_text_1"><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i>Ota, Ogun
+                  <div class="call_text_1"><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i> Ota, Ogun
                         State</a></div>
                </div>
             </div>
@@ -78,7 +78,7 @@
                      <a class="nav-link" href="/contact">Contact Us</a>
                   </li>
                </ul>
-               <div class="quote_btn"><a href="https://wa.me/2347025223913" target="_blank">Get A Quote</a></div>
+               <div class="quote_btn"><a href="https://wa.me/2347032692268" target="_blank">Get A Quote</a></div>
                </form>
             </div>
          </nav>
