--- a/index.html
+++ b/index.html
@@ -447,14 +447,13 @@
          <div class="contact_section_2">
             <div class="row">
                <div class="col-md-6">
-                  <form action="">
+                  <form action="/" method="post">
                      <div class="mail_section_1">
-                        <input type="text" class="mail_text" placeholder="Name" name="Name">
-                        <input type="text" class="mail_text" placeholder="Phone Number" name="Phone Number">
-                        <input type="text" class="mail_text" placeholder="Email" name="Email">
-                        <textarea class="message-bt" placeholder="Message" rows="5" id="comment"
-                           name="Message"></textarea>
-                        <div class="send_bt"><a href="#">SEND</a></div>
+                        <input required type="text" class="mail_text" placeholder="Name" name="name">
+                        <input required type="text" class="mail_text" placeholder="Phone Number" name="tel">
+                        <input required type="email" class="mail_text" placeholder="Email" name="email">
+                        <textarea class="message-bt" placeholder="Message" rows="5" id="comment" name="message"></textarea>
+                        <button type="submit" class="send_bt">SEND</button>
                      </div>
                   </form>
                </div>
